--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <div class="header">
         <div class="logo">
@@ -22,36 +24,36 @@
             <ul class="menu1">CONTACT</ul>
         </div>
     </div>
-
-    <div class="title">
-        <h2>SERVICES</h1>
-    </div>
-    <div class="subtitle">
-        <p>Lorem ipsum dolor sit amet consectetur.</p>
-    </div>
     <div class="services">
-
-        <div class="bl1">
-            <img src="img/Circle-1.png" alt="" class="circle">
-            <img src="img/Icon-Basket.png" alt="" class="img">
-            <h2 class="h2">E-Commerce</h2>
-            <p class="p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia exercitationem temporibus fuga itaque porro ipsum autem, amet esse?</p>
+        <div class="title">
+            <h2>SERVICES</h1>
         </div>
-
-        <div class="bl2">
-            <img src="img/Circle-1.png" alt="" class="circle">
-            <img src="img/Icon-Laptop.png" alt="" class="img">
-            <h2 class="h2">Responsive Web</h2>
-            <p class="p">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum dolorum magnam, illum corrupti maiores iure qui est veritatis!</p>
+        <div class="subtitle">
+            <p>Lorem ipsum dolor sit amet consectetur.</p>
         </div>
-        <div class="bl3">
-            <img src="img/Circle-1.png" alt="" class="circle">
-            <img src="img/Icon-Locked.png" alt="" class="img">
-            <h2 class="h2">Web Security</h2>
-            <p class="p">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia fugit ab minus, dolores maiores nisi magni necessitatibus natus.</p>
+        <div class="services1">
+
+            <div class="bl1">
+                <img src="img/Circle-1.png" alt="" class="circle">
+                <img src="img/Icon-Basket.png" alt="" class="img">
+                <h2 class="h2">E-Commerce</h2>
+                <p class="p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia exercitationem temporibus fuga itaque porro ipsum autem, amet esse?</p>
+            </div>
+
+            <div class="bl2">
+                <img src="img/Circle-1.png" alt="" class="circle">
+                <img src="img/Icon-Laptop.png" alt="" class="img">
+                <h2 class="h2">Responsive Web</h2>
+                <p class="p">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum dolorum magnam, illum corrupti maiores iure qui est veritatis!</p>
+            </div>
+            <div class="bl3">
+                <img src="img/Circle-1.png" alt="" class="circle">
+                <img src="img/Icon-Locked.png" alt="" class="img">
+                <h2 class="h2">Web Security</h2>
+                <p class="p">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia fugit ab minus, dolores maiores nisi magni necessitatibus natus.</p>
+            </div>
         </div>
     </div>
-
     <div class="contact-us-wrapper">
         <img src="img/Map Image.png" alt="" class="map">
         <div class="container">
@@ -60,15 +62,16 @@
             <div class="form-wrapper">
                 <div class="form">
                     <div class="left">
-                        <input type="text" class="input">
-                        <input type="text" class="input">
-                        <input type="text" class="input">
+                        <input type="text" class="input" placeholder="YOUR NAME*">
+                        <input type="text" class="input" placeholder="YOUR E-MAIL*">
+                        <input type="text" class="input" placeholder="SUBJECT">
                     </div>
                     <div class="right">
-                        <textarea name="" id="" cols="30" rows="10" class="textarea"></textarea>
+                        <textarea name="" id="" cols="30" rows="10" class="textarea" placeholder="YOUR MESSAGE*"></textarea>
                     </div>
                 </div>
                 <button type="" class="button">SEND MESSAGE</button>
             </div>
 </body>
+
 </html>
