--- a/index.html
+++ b/index.html
@@ -33,20 +33,20 @@
         </div>
         <div class="services1">
 
-            <div class="bl1">
+            <div class="bl">
                 <img src="img/Circle-1.png" alt="" class="circle">
                 <img src="img/Icon-Basket.png" alt="" class="img">
                 <h2 class="h2">E-Commerce</h2>
                 <p class="p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia exercitationem temporibus fuga itaque porro ipsum autem, amet esse?</p>
             </div>
 
-            <div class="bl2">
+            <div class="bl">
                 <img src="img/Circle-1.png" alt="" class="circle">
                 <img src="img/Icon-Laptop.png" alt="" class="img">
                 <h2 class="h2">Responsive Web</h2>
                 <p class="p">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum dolorum magnam, illum corrupti maiores iure qui est veritatis!</p>
             </div>
-            <div class="bl3">
+            <div class="bl">
                 <img src="img/Circle-1.png" alt="" class="circle">
                 <img src="img/Icon-Locked.png" alt="" class="img">
                 <h2 class="h2">Web Security</h2>
@@ -55,9 +55,9 @@
         </div>
     </div>
     <div class="contact-us-wrapper">
-        <img src="img/Map Image.png" alt="" class="map">
+        <img src="img/Map Image1.png" alt="" class="map" width="1300px">
         <div class="container">
-            <h2 class="h2-2">Contact us</h2>
+            <h2 class="h2-2">CONTACT US</h2>
             <p class="para">Lorem ipsum dolor sit amet consectetur.</p>
             <div class="form-wrapper">
                 <div class="form">
