--- a/index.html
+++ b/index.html
@@ -25,14 +25,19 @@
         </div>
     </div>
     <div class="services">
-        <div class="title">
-            <h2>SERVICES</h1>
+        <div class="titles">
+            <div class="title">
+                <h2>SERVICES</h1>
+            </div>
+            <div class="subtitle">
+                <p>Lorem ipsum dolor sit amet consectetur.</p>
+            </div>
         </div>
-        <div class="subtitle">
-            <p>Lorem ipsum dolor sit amet consectetur.</p>
-        </div>
+
+
         <div class="services1">
 
+        
             <div class="bl">
                 <img src="img/Circle-1.png" alt="" class="circle">
                 <img src="img/Icon-Basket.png" alt="" class="img">
@@ -71,6 +76,7 @@
                 </div>
                 <button type="" class="button">SEND MESSAGE</button>
             </div>
+        </div>
 </body>
 
 </html>
