--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <div class="header">
+    <div class="header container">
         <div class="logo">
             <img src="img/Logo-Treehouse.png" alt="" width="100px">
         </div>
@@ -24,7 +24,7 @@
             <ul class="menu1">CONTACT</ul>
         </div>
     </div>
-    <div class="services">
+    <div class="services container">
         <div class="titles">
             <div class="title">
                 <h2>SERVICES</h1>
@@ -37,25 +37,31 @@
 
         <div class="services1">
 
-        
+
             <div class="bl">
-                <img src="img/Circle-1.png" alt="" class="circle">
-                <img src="img/Icon-Basket.png" alt="" class="img">
+                <div class="icon">
+                    <img src="img/Icon-Basket.png" alt="" class="img">
+                </div>
                 <h2 class="h2">E-Commerce</h2>
-                <p class="p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia exercitationem temporibus fuga itaque porro ipsum autem, amet esse?</p>
+                <p class="p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia exercitationem temporibus
+                    fuga itaque porro ipsum autem, amet esse?</p>
             </div>
 
             <div class="bl">
-                <img src="img/Circle-1.png" alt="" class="circle">
-                <img src="img/Icon-Laptop.png" alt="" class="img">
+                <div class="icon">
+                    <img src="img/Icon-Laptop.png" alt="" class="img">
+                </div>
                 <h2 class="h2">Responsive Web</h2>
-                <p class="p">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum dolorum magnam, illum corrupti maiores iure qui est veritatis!</p>
+                <p class="p">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum dolorum magnam, illum
+                    corrupti maiores iure qui est veritatis!</p>
             </div>
             <div class="bl">
-                <img src="img/Circle-1.png" alt="" class="circle">
-                <img src="img/Icon-Locked.png" alt="" class="img">
+                <div class="icon">
+                    <img src="img/Icon-Locked.png" alt="" class="img">
+                </div>
                 <h2 class="h2">Web Security</h2>
-                <p class="p">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia fugit ab minus, dolores maiores nisi magni necessitatibus natus.</p>
+                <p class="p">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia fugit ab minus, dolores
+                    maiores nisi magni necessitatibus natus.</p>
             </div>
         </div>
     </div>
@@ -63,7 +69,7 @@
         <div class="container">
             <h2 class="h2-2">CONTACT US</h2>
             <p class="para">Lorem ipsum dolor sit amet consectetur.</p>
-            <div class="form-wrapper">
+            <form class="form-wrapper">
                 <div class="form">
                     <div class="left">
                         <input type="text" class="input" placeholder="YOUR NAME*">
@@ -71,12 +77,14 @@
                         <input type="text" class="input" placeholder="SUBJECT">
                     </div>
                     <div class="right">
-                        <textarea name="" id="" cols="30" rows="10" class="textarea" placeholder="YOUR MESSAGE*"></textarea>
+                        <textarea name="" id="" cols="30" rows="10" class="textarea"
+                            placeholder="YOUR MESSAGE*"></textarea>
                     </div>
                 </div>
                 <button type="" class="button">SEND MESSAGE</button>
-            </div>
+            </form>
         </div>
+    </div>
 </body>
 
 </html>
