--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
             <img src="img/Logo-Treehouse.png" alt="" width="100px">
         </div>
         <div class="menu">
-            <ul class="menu1">HOME</ul>
-            <ul class="menu1">SERVICES</ul>
-            <ul class="menu1">PORTFOLIO</ul>
-            <ul class="menu1">ABOUT</ul>
-            <ul class="menu1">CONTACT</ul>
+            <ul class="menu-items">HOME</ul>
+            <ul class="menu-items">SERVICES</ul>
+            <ul class="menu-items">PORTFOLIO</ul>
+            <ul class="menu-items">ABOUT</ul>
+            <ul class="menu-items">CONTACT</ul>
         </div>
     </div>
     <div class="services container">
@@ -35,40 +35,40 @@
         </div>
 
 
-        <div class="services1">
+        <div class="services-content">
 
 
-            <div class="bl">
+            <div class="block">
                 <div class="icon">
                     <img src="img/Icon-Basket.png" alt="" class="img">
                 </div>
-                <h2 class="h2">E-Commerce</h2>
-                <p class="p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia exercitationem temporibus
+                <h2 class="name">E-Commerce</h2>
+                <p class="about">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia exercitationem temporibus
                     fuga itaque porro ipsum autem, amet esse?</p>
             </div>
 
-            <div class="bl">
+            <div class="block">
                 <div class="icon">
                     <img src="img/Icon-Laptop.png" alt="" class="img">
                 </div>
-                <h2 class="h2">Responsive Web</h2>
-                <p class="p">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum dolorum magnam, illum
+                <h2 class="name">Responsive Web</h2>
+                <p class="about">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum dolorum magnam, illum
                     corrupti maiores iure qui est veritatis!</p>
             </div>
-            <div class="bl">
+            <div class="block">
                 <div class="icon">
                     <img src="img/Icon-Locked.png" alt="" class="img">
                 </div>
-                <h2 class="h2">Web Security</h2>
-                <p class="p">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia fugit ab minus, dolores
+                <h2 class="name">Web Security</h2>
+                <p class="about">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia fugit ab minus, dolores
                     maiores nisi magni necessitatibus natus.</p>
             </div>
         </div>
     </div>
     <div class="contact-us-wrapper">
         <div class="container">
-            <h2 class="h2-2">CONTACT US</h2>
-            <p class="para">Lorem ipsum dolor sit amet consectetur.</p>
+            <h2 class="title-2">CONTACT US</h2>
+            <p class="subtitle-2">Lorem ipsum dolor sit amet consectetur.</p>
             <form class="form-wrapper">
                 <div class="form">
                     <div class="left">
